style.css
body{
    font-family: 'Poppins', sans-serif;
    margin: 0px;
}
.half-width{
    width: 50%;
    padding: 5px;
}
.flexible-continer{
    display: flex;
}
.intro-banner{
    background-image: url(images/intro-bg.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    height: 600px;
    border-bottom: 6px solid transparent;
    border-image: linear-gradient(to right, red , yellow);
    border-image-slice: 1;
    
}

.about-banner{
    
    background-color: rgb(16, 14, 23);
    height: 600px;
    
}

#my-image{
    width: 210px;
    height: 200px;
    
}
.profile-img{
    text-align: center;
}

#ab-img{
   
    max-width: 70%;
    height: auto;
}
.into-text{
    margin-left: 200px;
}

.intro-details{
    padding-top: 200px;
}
#hello{
    background-color: #0bceaf;
    color: white;
    font-size: 14px;
    line-height: 24px;
    letter-spacing: 1px;
    font-weight: bold;
    padding: 10px 30px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
    border-bottom-left-radius: 0px;
}

#name{
    color: white;
    font-size: 35px;
    font-weight: 600;
    line-height: 20px;
    
}
#designation{
    color: rgb(250, 224, 79);
    font-size: 20px;
    font-weight: 600;
    line-height: 20px;
    
}
.addess{
    color: white;
    font-weight: 400;
    line-height: 20px;
}
#about-text{
    color: white;
}
#about-me-details{
    color: rgb(216, 216, 216);
    text-align: justify;

}
.button-skill{
    color: white;
    border: 1px solid #0bceaf;
    padding: 4px 10px;
    border-radius: 4px;
    background-color: rgb(2, 2, 19);
    margin-bottom: 50px;
}

#download-cv{
    text-decoration: none;
    background-color: #0bceaf;
    color: white;
    font-size: 14px;
    line-height: 24px;
    letter-spacing: 1px;
    font-weight: bold;
    padding: 10px 30px;
    border-radius: 5px;
    margin-top: 50px;
}
#download-cv:hover{
    text-decoration: none;
    background-color: rgb(2, 2, 19);
    border: 1px solid #0bceaf;
    color: rgb(255, 255, 255);
    font-size: 14px;
    line-height: 24px;
    letter-spacing: 1px;
    font-weight: bold;
    padding: 10px 30px;
    border-radius: 5px;
    margin-top: 50px;
}

#what-do-text{
    text-align: center;
}

.what-do-banner{
    
    background-color: rgb(16, 14, 23);
    height: 600px;
    color: white;
}
.what-do-details{
    padding: 20px;
    margin: 35px;
    box-shadow: 10px 20px 50px black;
}

.footer{
    background-color: rgb(16, 14, 23);
    color: rgb(212, 212, 212);
    text-align: center;
    height: auto;
}

